Design And Optimization Commit : Fixed some hard coded sizing such as the sidebar. Fixed some issues concerning the long game title that could be too long for some games. Added compatibility for other browsers (future usage) Fully fixed reactivity for the library that was horrendous previously. Removed most event listeners for better optimizations. made the reload quicker because the user will probably just spam the save settings and it will break. Removed repetitive TODOs.

--- a/src/App.css
+++ b/src/App.css
@@ -23,14 +23,14 @@ h2 {
 
 .app-container {
   display: grid;
-  grid-template-columns: 260px 1fr;
+  grid-template-columns: 17vw 1fr;
   height: 100vh; /* Ensure the app container fills the entire viewport */
   overflow: hidden;
 }
 
 .sidebar {
   position: fixed;
-  width: 260px;
+  width: 17vw;
   height: 100%; /* Sidebar takes full height */
   overflow-x: hidden;
   z-index: 9999;
