--- a/src/components/Gamedownloadvertical-01/Gamedownloadvertical.css
+++ b/src/components/Gamedownloadvertical-01/Gamedownloadvertical.css
@@ -2,7 +2,7 @@
 .sidebar-space {
     bottom: 0;
     position: fixed;
-    width: calc(50% - 260px); /* Adjust to fit within screen width minus sidebar */
+    width: calc(50% - 17vw); /* Adjust to fit within screen width minus sidebar */
     background-color: rgba(34, 34, 36, 1);
     color: white;
     z-index: 10;
@@ -10,7 +10,7 @@
     box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.5);
     padding: 10px;
     overflow: hidden;
-    transform: translateX(260px);
+    transform: translateX(17vw);
     transition: transform 2s ease;
     /* max-height: 75vh;  */
     display: inline-flex;
